<?xml version="1.0"?>
<package format="2">
  <name>example</name>
  <version>1.0.0</version>
  <description>An example package</description>

  <maintainer email="henri.burau@web.de">Henri Burau</maintainer>
  <maintainer email="franek@stark-berger.de">Franek Stark</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/Hentra/ros-example.git</url>

  <author email="henri.burau@web.de">Henri Burau</author>
  <author email="franek@stark-berger.de">Franek Stark</author>


  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
